# TaskSystem-BunkerMode

./: .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  AUTH.md  BunkerMode.py  BunkerModePOO.py  DEPLOY_API.md  README.md  alembic.ini  auth.py  db_config.py  gerenciador.py  interface.py  lista_tarefas_v0.1.py  main.py  menu.py  missao.py  missoes.json  operacao.py  pyproject.toml  pytest.ini  repositorio.py  repositorio_postgres.py  requirements-lock.txt  requirements.txt  revisao.py  test_front.html  usuario.py
alembic/: env.py
api/: __init__.py  __main__.py  entrypoint.py  main.py  routes.py  schemas.py
backend/: .dockerignore  .env.example  Dockerfile  auth.py  core_exceptions.py  missao.py  objetivo.py  operacao.py  requirements-lock.txt  requirements.txt
core/: auditoria.py
docs/: API_FLOW.md  COMPONENT_GUIDE.md  FRONTEND_ARCHITECTURE.md  NEXT_FRONTEND_STEPS.md  NEXT_STEPS.md  PROJECT_STATE.md  RUNNING_THE_PROJECT.md  STATE_FLOW.md  STYLE_SYSTEM.md  WEB_STRUCTURE.md  assets-general-review.md  auditoria-idioma-ui.md  regra-7-dias.md
frontend/: api.js  app.js  eslint.config.js  index.html  package-lock.json  package.json  style.css
frontend-react/: index.html  package-lock.json  package.json
migrations/: 20260520_montanha_fase_1.sql
mobile/: .env.example  .gitignore  App.js  README.md  app.json  package-lock.json  package.json  tsconfig.json
models/: missao.py
scripts/: teste_conexao_postgres.py
services/: __init__.py  auth_service.py  exceptions.py  missao_service.py  mission_permissions.py  objetivo_service.py  operacao_service.py  (+4 more)
(+288 files in other folders)
