[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bunkermode"
version = "0.1.0"
description = "Sistema pessoal de execução com modos General e Soldado"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.12",
  "starlette==0.45.3",
  "httpx==0.28.1",
  "anyio==4.10.0",
  "psycopg[binary]==3.2.9",
  "sqlalchemy==2.0.41",
  "alembic==1.16.1",
  "pydantic==2.11.4",
  "python-dotenv==1.0.1",
  "uvicorn==0.34.2",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
markers = [
  "integration: executa testes de integração que dependem de um banco PostgreSQL real",
]
